# copilot-conductor

./: .gitignore  .gitmodules  README.md  Taskfile.yml  conduct  conduct.bash-completion  conductor.json  conductor.yaml  setup.sh.header  setup.sh.header.full
.github/: trust.json  (+2 more)
src/python/con-pilot/: README.md  Taskfile.yml  pyproject.toml
src/python/con-pilot/appimage/: AppRun  io.conductor.ConPilot.desktop
src/python/con-pilot/flatpak/: con-pilot-launcher.sh
src/python/con-pilot/flatpak/repo/: summary  summary.idx
src/python/con-pilot/src/con_pilot/: __init__.py  app.py  auth.py  conductor.py  dispatch.py  exceptions.py  jwt_auth.py  logger.py  main.py  models.py  observability.py  paths.py  server.py  trust.py  users.py
src/python/con-pilot/src/con_pilot/_facets/: agents.py  cron.py
src/python/con-pilot/src/con_pilot/agents/: router.py  service.py
src/python/con-pilot/src/con_pilot/auth/: router.py  schemas.py  service.py
src/python/con-pilot/src/con_pilot/conductor/: __init__.py  config_store.py  copilot_service.py  facade.py  fs_handler.py  models.py  requests.py  responses.py  router.py  snapshot_service.py  trust.py
src/python/con-pilot/src/con_pilot/configs/: router.py  validation.py
src/python/con-pilot/src/con_pilot/core/: __init__.py  dispatch.py  settings.py  trust.py
src/python/con-pilot/src/con_pilot/core/models/: __init__.py  config.py  responses.py  runtime.py
src/python/con-pilot/src/con_pilot/cron/: dispatch.py  router.py  service.py
src/python/con-pilot/src/con_pilot/documents/: db.py  router.py  worker.py
src/python/con-pilot/src/con_pilot/health/: router.py
src/python/con-pilot/src/con_pilot/projects/: router.py
src/python/con-pilot/src/con_pilot/security/: auth.py  jwt_auth.py  users.py
src/python/con-pilot/src/con_pilot/snapshots/: router.py
src/python/con-pilot/src/con_pilot/sync/: router.py
src/python/con-pilot/src/con_pilot/tasks/: router.py
src/python/con-pilot/src/con_pilot/users/: router.py  service.py
src/python/con-pilot/src/con_pilot/v1/: __init__.py  api.py
src/python/con-pilot/tests/: conftest.py  test_agents_endpoint.py  test_auth.py  test_cli_integration.py  test_con_pilot.py  test_config_store.py  test_dev_admin_key.py  test_documents_endpoint.py  test_health_endpoint.py  test_users_endpoint.py
(+92 files in other folders)
