[project]
name = "con-pilot"
version = "0.1.0"
description = "Conductor pilot — agent sync and scheduling library for the conductor system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "croniter>=3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
con-pilot = "con_pilot.main:main"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "jupyter>=1.1.1",
    "pytest>=8.0",
]

[tool.uv]
native-tls = true

# [[tool.uv.index]]
# name = "artifactory"
# url = "https://artifactory.azure.scor.com/artifactory/api/pypi/pypi/simple/"
# priority = "primary"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/con_pilot/conductor.py" = ["E501"]  # long lines inside docstrings and Markdown templates

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

