[project]
name = "con-pilot"
version = "0.2.0"
description = "Conductor pilot — agent sync and scheduling library for the conductor system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "croniter>=3.0",
    "fastapi>=0.110",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
con-pilot = "con_pilot.main:main"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.0",
]

[tool.uv]
native-tls = true

# [[tool.uv.index]]
# name = "artifactory"
# url = "https://artifactory.azure.scor.com/artifactory/api/pypi/pypi/simple/"
# priority = "primary"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/con_pilot/conductor.py" = ["E501"]  # long lines inside docstrings and Markdown templates

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

